--- a/index.html
+++ b/index.html
@@ -207,17 +207,7 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
-          </p>
-
-          <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            Hello! I'm a Computer Engineering student at the University of Toronto with over two years of experience in object-oriented programming (OOP) seeking a four-month Software/Hardware Engineering coop starting in Summer 2024.
           </p>
         </section>
 
@@ -530,14 +520,13 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University of Toronto - Computer Engineering</h4>
+              <h4 class="h4 timeline-item-title">University of Toronto - Bachelor of Applied Science in Computer Engineering</h4>
 
-              <span>2007 — 2008</span>
+              <span>2021 - Present</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                <bold style="font-weight: 500;">Relevant Courses:</bold> Software Communication and Design, Programming Languages
+                <br/> <bold style="font-weight: 500;">Awards:</bold> Edward S Rogers Sr.Admission Scholarship (2021), Dean's Merit Award (2021).
               </p>
 
             </li>
@@ -560,43 +549,26 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">Starbucks - Barista</h4>
 
-              <span>2015 — Present</span>
+              <span>2022 — Present</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                Utilized point-of-sale systems and inventory management software to track and manage stock levels and orders.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Nesters Market - Grocery Clerk</h4>
 
-              <span>2013 — 2015</span>
+              <span>2018 — 2021</span>
 
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Web designer</h4>
-
-              <span>2010 — 2013</span>
-
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
+              <ul class="timeline-text">
+                <li>Efficiently managed and maintained the organization of store shelves, ensuring accurate placement of products and facilitating a seamless shopping experience for customers.</li>
+                <li>Effectively communicated with team members and management to address inventory issues and maintain optimal stock levels.</li>
+              </ul>
 
             </li>
 
@@ -613,20 +585,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="80">80%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
+                <h5 class="h5">C/C++</h5>
                 <data value="70">70%</data>
               </div>
 
@@ -639,7 +598,20 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
+                <h5 class="h5">Verilog</h5>
+                <data value="80">80%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 80%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">HTML/CSS</h5>
                 <data value="90">90%</data>
               </div>
 
@@ -652,7 +624,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
+                <h5 class="h5">Python</h5>
                 <data value="50">50%</data>
               </div>
 
