fix linkedin link

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           </li>
 
           <li class="social-item">
-            <a href="https://www.linkedin.com/in/paigemcdo" class="social-link">
+            <a href="https://www.linkedin.com/in/paigemcdougall" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
