updated project tab and aspirations blurbs

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vCard - Personal Portfolio</title>
+  <title>Paige McDougall's Portfolio</title>
 
   <!--
     - favicon
@@ -176,7 +176,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Portfolio</button>
+            <button class="navbar-link" data-nav-link>Projects</button>
           </li>
 
           <!-- <li class="navbar-item">
@@ -218,7 +218,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3 service-title">Aspirations</h3>
 
           <ul class="service-list">
 
@@ -230,10 +230,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">Front-End Development</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Looking to kickstart my journey in front-end development. I am eager to contribute to projects that involve HTML, CSS, and JavaScript. With a keen interest in creating visually appealing and intuitive interfaces, I am seeking opportunities to learn and grow while contributing my unique skills and creativity to dynamic projects with a supportive team.
                 </p>
               </div>
 
@@ -246,16 +246,16 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">Embedded Systems</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  The seamless integration of hardware and software in embedded systems drives me to work in this field. The challenge of optimizing resources for efficient solutions in real-time environments aligns with my passion. I am eager to contribute to cutting-edge technologies, solve complex problems, and play a pivotal role in shaping the future of embedded systems.
                 </p>
               </div>
 
             </li>
 
-            <li class="service-item">
+            <!-- <li class="service-item">
 
               <div class="service-icon-box">
                 <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
@@ -285,7 +285,7 @@
                 </p>
               </div>
 
-            </li>
+            </li> -->
 
           </ul>
 
@@ -648,15 +648,15 @@
         - #PORTFOLIO
       -->
 
-      <article class="portfolio" data-page="portfolio">
+      <article class="projects" data-page="projects">
 
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h2 class="h2 article-title">Projects</h2>
         </header>
 
         <section class="projects">
 
-          <ul class="filter-list">
+          <!-- <ul class="filter-list">
 
             <li class="filter-item">
               <button class="active" data-filter-btn>All</button>
@@ -674,7 +674,7 @@
               <button data-filter-btn>Web development</button>
             </li>
 
-          </ul>
+          </ul> -->
 
           <div class="filter-select-box">
 
@@ -720,12 +720,14 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/zenithFull.png" alt="Zenith" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">Zenith - GIS Development</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Developed route-finding map application in Visual Studios (VS) Code using C++ and OpenStreetMaps API to display dynamic map details across 7 international cities. Processed data, implemented visual design heuristics for equity and accessibility, and search algorithms such as Dijkstra, A*, and Greedy algorithm with 3-/4-OPT.
+
+                </p>
 
               </a>
             </li>
@@ -738,17 +740,19 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                  <img src="./assets/images/taiko.jpg" alt="Taiko" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
+                <h3 class="project-title">Taiko - FPGA Game Development</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Developed a rhythm-based game on an FPGA system with a VGA display using verilog and ROM data storage. Demonstrated proficiency in real-time signal processing, embedded systems, and a passion for innovation.
+
+                </p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <!-- <li class="project-item  active" data-filter-item data-category="web design">
               <a href="#">
 
                 <figure class="project-img">
@@ -872,7 +876,7 @@
                 <p class="project-category">Web development</p>
 
               </a>
-            </li>
+            </li> -->
 
           </ul>
 
