--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
 
           </ul> -->
 
-          <div class="filter-select-box">
+          <!-- <div class="filter-select-box">
 
             <button class="filter-select" data-select>
 
@@ -708,7 +708,7 @@
 
             </ul>
 
-          </div>
+          </div> -->
 
           <ul class="project-list">
 
