fixed tab issue

--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
 
           </ul> -->
 
-          <!-- <div class="filter-select-box">
+          <div class="filter-select-box">
 
             <button class="filter-select" data-select>
 
@@ -708,11 +708,11 @@
 
             </ul>
 
-          </div> -->
+          </div>
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="gis development">
               <a href="#">
 
                 <figure class="project-img">
@@ -732,7 +732,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="game development">
               <a href="#">
 
                 <figure class="project-img">
