--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
 
           </ul> -->
 
-          <div class="filter-select-box">
+          <div class="filter-select-box" style="display: none;">
 
             <button class="filter-select" data-select>
 
