made boxes even on about page
removed one word (shaping) from embedded systems section

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 <h4 class="h4 service-item-title">Embedded Systems</h4>
 
                 <p class="service-item-text">
-                  The seamless integration of hardware and software in embedded systems drives me to work in this field. The challenge of optimizing resources for efficient solutions in real-time environments aligns with my passion. I am eager to contribute to cutting-edge technologies, solve complex problems, and play a pivotal role in shaping the future of embedded systems.
+                  The seamless integration of hardware and software in embedded systems drives me to work in this field. The challenge of optimizing resources for efficient solutions in real-time environments aligns with my passion. I am eager to contribute to cutting-edge technologies, solve complex problems, and play a pivotal role in the future of embedded systems.
                 </p>
               </div>
 
