added pdf resume download/view

--- a/index.html
+++ b/index.html
@@ -506,6 +506,12 @@
           <h2 class="h2 article-title">Resume</h2>
         </header>
 
+        <section class="resume_button">
+          <a href="./assets/images/resume.pdf" target="_blank" class="social-link">
+            <u><h3 style="color: white">View PDF Resume</h3></u>
+          </a>
+        </section>
+
         <section class="timeline">
 
           <div class="title-wrapper">
