spelling error fixed in portfolio

--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
 
                 <h3 class="project-title">Zenith - GIS Development</h3>
 
-                <p class="project-category">Developed route-finding map application in Visual Studios (VS) Code using C++ and OpenStreetMaps API to display dynamic map details across 7 international cities. Processed data, implemented visual design heuristics for equity and accessibility, and search algorithms such as Dijkstra, A*, and Greedy algorithm with 3-/4-OPT.
+                <p class="project-category">Developed route-finding map application in Visual Studio Code using C++ and OpenStreetMaps API to display dynamic map details across 7 international cities. Processed data, implemented visual design heuristics for equity and accessibility, and search algorithms such as Dijkstra, A*, and Greedy algorithm with 3-/4-OPT.
 
                 </p>
 
